<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary">

    <TextView
        android:id="@+id/titleSignup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_text"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:layout_marginTop="20sp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/signupText1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_desc"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:layout_marginTop="16dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintTop_toBottomOf="@id/titleSignup"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/signupText3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tittle_text"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:layout_marginTop="15dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintTop_toBottomOf="@id/titleSignup"
        app:layout_constraintStart_toEndOf="@id/signupText1" />

    <TextView
        android:id="@+id/signupText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_desc2"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintTop_toBottomOf="@id/signupText1"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="4dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintTop_toBottomOf="@id/signupText1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/nameLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name_text"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/primary" />

            <EditText
                android:id="@+id/nameInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:hint="@string/name_input"
                android:inputType="textEmailAddress"
                android:textSize="14sp"
                android:background="@drawable/input_border"
                android:drawableTint="@color/primary"
                android:textColor="@color/primary"
                android:padding="10dp"
                android:drawablePadding="8dp"
                android:drawableStart="@drawable/ic_name" />

            <TextView
                android:id="@+id/emailLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email_text"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/primary"
                android:layout_marginTop="16dp" />

            <EditText
                android:id="@+id/emailInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:autofillHints="example@gmail.com"
                android:hint="@string/email_input"
                android:inputType="textEmailAddress"
                android:textSize="14sp"
                android:textColor="@color/primary"
                android:drawablePadding="8dp"
                android:background="@drawable/input_border"
                android:drawableTint="@color/primary"
                android:padding="10dp"
                android:drawableStart="@drawable/ic_email" />

            <TextView
                android:id="@+id/passwordLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password_text"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/primary"
                android:layout_marginTop="16dp" />

            <com.example.dicodingstoryappselangkahmenujukebebasan.ui.customview.Password
                android:id="@+id/passwordInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="******"
                android:hint="@string/password_input"
                android:inputType="textPassword"
                android:layout_marginTop="5dp"
                android:textSize="14sp"
                android:drawablePadding="8dp"
                android:background="@drawable/input_border"
                android:drawableTint="@color/primary"
                android:padding="10dp"
                android:drawableStart="@drawable/ic_password" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    style="@style/RoundedButton"
                    android:id="@+id/signupButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/register_text"
                    android:backgroundTint="@color/black"
                    android:textSize="16sp"
                    android:layout_marginTop="30dp" />

                <ProgressBar
                    android:layout_marginTop="14dp"
                    android:id="@+id/loadingIndicator"
                    android:layout_width="34dp"
                    android:layout_height="34dp"
                    android:layout_gravity="center"
                    android:indeterminate="true"
                    android:indeterminateTint="@color/primary"
                    android:indeterminateTintMode="src_atop"
                    android:visibility="gone" />
            </FrameLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>
