<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary">

    <ImageView
        android:id="@+id/mainImage"
        android:layout_width="0dp"
        android:layout_height="390dp"
        android:contentDescription="@string/onboard_image"
        android:scaleType="centerCrop"
        android:src="@drawable/onboard_img"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/bottomCard"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.1"
        android:layout_marginHorizontal="8dp"
        android:layout_marginVertical="18dp" />

    <androidx.cardview.widget.CardView
        android:id="@+id/bottomCard"
        android:layout_width="0dp"
        android:layout_height="250dp"
        android:background="#FFFFFF"
        app:cardCornerRadius="20dp"
        app:cardElevation="6dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="-30dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp">

            <TextView
                android:id="@+id/cardTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tittle_text"
                android:textSize="32sp"
                android:textStyle="bold"
                android:textColor="@color/primary"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:id="@+id/cardDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tittle_desc"
                android:textSize="14sp"
                android:textColor="@color/black"
                app:layout_constraintTop_toBottomOf="@id/cardTitle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="8dp" />

            <Button
                style="@style/RoundedButton"
                android:id="@+id/loginButton"
                android:layout_width="0dp"
                android:layout_height="58dp"
                android:text="@string/login_text"
                android:textSize="16sp"
                android:backgroundTint="@color/primary"
                android:textColor="@android:color/white"
                app:layout_constraintTop_toBottomOf="@id/cardDescription"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="16dp"
                android:layout_marginHorizontal="16dp" />

            <Button
                style="@style/RoundedButton"
                android:id="@+id/signupButton"
                android:layout_width="0dp"
                android:layout_height="58dp"
                android:text="@string/register_text"
                android:textSize="16sp"
                android:backgroundTint="@color/black"
                android:textColor="@android:color/white"
                app:layout_constraintTop_toBottomOf="@id/loginButton"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginHorizontal="16dp" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>
