<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="16dp">

    <!-- Image -->
    <ImageView
        android:id="@+id/detailImage"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:contentDescription="@string/image_desc"
        android:scaleType="centerCrop"
        android:background="@drawable/input_border"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- CardView for Details -->
    <androidx.cardview.widget.CardView
        android:id="@+id/detailsCardView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:padding="16dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="4dp"
        app:layout_constraintTop_toBottomOf="@id/detailImage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <!-- Inner Layout -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <!-- Name Label -->
            <TextView
                android:id="@+id/nameLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name_tittle"
                android:textSize="16sp"
                android:textStyle="bold" />

            <!-- Name -->
            <TextView
                android:id="@+id/detailName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:layout_marginTop="4dp" />

            <!-- Description Label -->
            <TextView
                android:id="@+id/descriptionLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/description_tittle"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_marginTop="16dp" />

            <!-- Description -->
            <TextView
                android:id="@+id/detailDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:layout_marginTop="4dp" />

            <!-- Created At Label -->
            <TextView
                android:id="@+id/createdAtLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/create_at_tittle"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_marginTop="16dp" />

            <!-- Created At -->
            <TextView
                android:id="@+id/detailCreatedAt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:layout_marginTop="4dp" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <Button
        style="@style/RoundedButton"
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/kembali_text"
        android:layout_marginTop="16dp"
        android:layout_gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:backgroundTint="@color/primary"/>

    <ProgressBar
        android:layout_marginTop="14dp"
        android:id="@+id/loadingIndicator"
        android:layout_width="34dp"
        android:layout_height="34dp"
        android:layout_gravity="center"
        android:indeterminate="true"
        android:indeterminateTint="@color/primary"
        android:indeterminateTintMode="src_atop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/detailsCardView"
        android:visibility="gone"/>



</androidx.constraintlayout.widget.ConstraintLayout>
